--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ body{
 .circle-perfil{
     width: 280px;
     height: 280px;
-    background-image: url("../assets/img/perfil.jpg");
+    background-image: url("../assets/img/profile .jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
