--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,23 @@
 :root{
     --white: #e2e5e4;
     --blueGreenDark: #152D35;
+    --greenDark: #0a1418;
     --blueGreen: #345B63;
+    --blueGreenOpacity: #111f2236;
     --blueGreenSpan: #406770;
     --menuBlueGreen: #162e37c4;
     --pastelGreen: #D4ECDD;
-    --pastelGreenOpacity: #d4ecdd2c;
     --orange: #c7a186;
     --crimsonLight: #C28F84;
     --skyBlue: #7ca8b6;
     --yellowLight: #D1BF80;
     --lime: #96BBAB;
     --yellowBrown: #BBA761;
-    --pinky: #AD839A;
-    --lemon: #8fa89a;
+    --pinky: #af7486;
+    --lemon: #749c86;
     --wine: #a1888a;
-    --sombra: -2px 10px 30px -15px #081114;
+    --sombra: -2px 10px 25px -15px #0a1316;
     --sombraBtn: -2px 10px 25px -9px #081114;
-    --sombraBtnUp: -1px -1px 40px -3px #071012;
     --sombraCards: -2px 10px 25px -9px #081114;
 }
 
@@ -30,13 +30,18 @@ html{
     padding: 0;
     margin: 0;
     font-family: 'DM Sans', sans-serif;
-    color: var(--white);
     text-decoration: none;
     text-align: center;
+    /* outline: 1px solid #ccc; */
 }
 
 body{
     background-color: var(--blueGreenDark);
+    color: var(--white);
+}
+
+body * a{
+    color: var(--white);
 }
 
 .section-styles{
@@ -98,6 +103,7 @@ body{
 
 .menu .toggle-btn{
     background: none;
+    color: var(--white);
     border: none;
     font-size: 1.5rem;
 }
@@ -140,28 +146,33 @@ body{
 }
 
 .btn-skyblue{
-    background-color: var(--pastelGreen);
-    color: var(--blueGreenDark);
-    font-weight: 500;
+    background-color: var(--blueGreenSpan);
+    border: 1px solid transparent;
     transition: 300ms linear;
+}
+.btn-skyblue i{
+    margin-left: .4rem;
+    right: 0;
 }
 
 .btn-skyblue:hover{
-    background-color: var(--blueGreenSpan);
-    color: var(--white);
+    border: 1px solid var(--blueGreenDark);
+    color: var(--greenDark);
 }
 
 .btn-cv{
-    border: 1px solid var(--lime);
-    transition: 300ms linear;
+    border: 1px solid var(--white);
+    font-weight: 500;
+    transition: 250ms linear;
 }
 .btn-cv i{
     margin-right: .5rem;
-    font-size: .8rem;
 }
 
 .btn-cv:hover{
-    background-color: var(--pastelGreenOpacity);
+    background-color: var(--greenDark);
+    border: 1px solid transparent;
+    color: var(--white);
 }
 
 /* ACERCA DE */
@@ -170,68 +181,64 @@ body{
 }
 
 .acerca-de .content-perfil{
-    max-width: 280px;
-    max-height: 280px;
-    margin: 2rem;
+    margin: 2rem 0;
     position: relative;
+}
+@media screen and (min-width: 800px) {
+    .acerca-de .content-perfil{
+        margin: 2.5rem;
+    }
 }
 
 .circle-perfil{
-    width: 280px;
-    height: 280px;
+    min-width: 250px;
+    min-height: 250px;
     background-image: url("../assets/img/profile .jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    overflow: hidden;
     border-radius: 50%;
 }
 
 .acerca-de .git, .linke, .twitt{
     position: absolute;
-    font-size: 2.8rem;
-    transition: 100ms linear;
-}
-
-.acerca-de .git:hover, .linke:hover{
     font-size: 2.7rem;
+    transition: 200ms linear;
 }
-
 .acerca-de .git{
-    top: 60%; left: 2%;
+    top: 55%; left: 0;
 }
 .acerca-de .linke{
-    top: 75%; right: 8%;
+    top: 65%; right: 3%;
 }
 .acerca-de .twitt{
     top: 25%; right: -3%;
     font-size: 2.3rem;
 }
-
-.acerca-de .twitt:hover{
-    font-size: 2.2rem;
+.acerca-de .git:hover, .linke:hover, .twitt:hover{
+    transform: scale(1.1);
 }
 
 .btn-contacto{
-    padding: .5rem 1rem;
-    border-radius: 8px;
+    background-color: var(--pastelGreen);
+    color: var(--blueGreenDark);
+    padding: .5rem 1.2rem;
+    border-radius: 4px;
     box-shadow: var(--sombraBtn);
     position: relative;
-    bottom: 12px;
-    right: 25px;
+    bottom: 15px;
+    right: 20px;
+    transition: 250ms linear;
 }
-
 .btn-contacto>i{
-    font-size: 1.3rem;
-    color: var(--blueGreenDark);
-    margin-right: 1.2rem;
+    font-size: 1.2rem;
+    margin-right: .7rem;
     position: relative;
-    top: .2rem;
-    transition: 300ms;
+    top: .1rem;
 }
-
-.btn-contacto:hover>i{
-    color: var(--white);
+.btn-contacto:hover{
+    background-color: var(--greenDark);
+    color: var(--pastelGreen);
 }
 
 .card-acerca{
@@ -239,8 +246,8 @@ body{
     background-color: var(--blueGreen);
     max-width: 580px;
     padding: 1rem;
-    margin: 2rem 1rem;
-    border-radius: 4px;
+    margin: 2rem .8rem;
+    border-radius: 2px;
     box-shadow: var(--sombra);
 }
 
@@ -248,7 +255,7 @@ body{
     text-align: left;
     padding: 1rem;
     letter-spacing: 1px;
-    line-height: 1.6rem;
+    line-height: 1.5rem;
     font-size: 14px;
 }
 
@@ -379,7 +386,7 @@ body{
 
 /* PORTAFOLIO */
 .cards-portaf{
-    gap: 2rem;
+    gap: 1.8rem;
 }
 
 .card-relative{
@@ -388,13 +395,12 @@ body{
 }
 
 .card{
-    min-width: 260px;
-    height: 170px;
+    min-width: 240px;
+    min-height: 160px;
     background-size: cover;
     background-repeat: no-repeat;
-    margin: 40px 0;
-    overflow: hidden;
-    border-radius: 4px;
+    margin: 3rem 0;
+    border-radius: 2px;
     box-shadow: var(--sombraCards);
     filter: brightness(60%);
     transition: 500ms linear;
@@ -404,9 +410,9 @@ body{
     background-color: var(--yellowBrown);
     color: var(--blueGreenDark);
     padding: .3rem .8rem;
-    position: fixed;
-    top: 75%;
-    left: -3%;
+    position: absolute;
+    top: 72%;
+    left: 5%;
     border-radius: 2px;
     box-shadow: var(--sombraCards);
 }
@@ -426,35 +432,49 @@ body{
 }
 
 .cards-portaf .btn-lateral{
-    background-color: var(--pastelGreen);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
     border-radius: 4px;
     position: absolute;
-    top: 30%;
-    right: -5%;
+    top: 35%;
+    right: -4%;
     box-shadow: var(--sombraBtn);
     overflow: hidden;
 }
 
 .btn-lateral i{
-    color: var(--blueGreenDark);
-    font-size: 1.5rem;
+    color: var(--blueGreenSpan);
+    font-size: 1.3rem;
+}
+.btn-lateral .btn-git, .btn-link{
+    width: 100%;
     padding: 1rem .6rem;
-    transition: 100ms linear;
+    transition: 200ms linear;
+    position: relative;
+}
+.btn-lateral .btn-git{
+    background-color: var(--pastelGreen);
+}
+.btn-lateral .btn-link{
+    background-color: var(--pastelGreen);
 }
 
-.btn-lateral .btn-git:hover{
-    color: var(--blueGreenSpan);
-    box-shadow: var(--sombraBtn);
-}
-.btn-lateral .btn-link:hover{
-    color: var(--blueGreenSpan);
-    box-shadow: var(--sombraBtnUp);
+.btn-lateral .btn-git:hover, .btn-link:hover{
+    background-color: var(--blueGreen);
+    color: var(--greenDark);
 }
 
-.btn-lateral .portf-line{
-    border: 1px solid var(--blueGreenDark);
-    width: 70%;
-    margin: 0 auto;
+.btn-lateral .btn-git::after{
+    content: '';
+    position: absolute;
+    z-index: 5;
+    bottom: -1px;
+    right: 0;
+    margin: 0 .4rem;
+    border: 1px solid var(--blueGreenSpan);
+    width: 60%;
 }
 
 /* CONTACTO */
@@ -467,7 +487,7 @@ body{
 }
 
 .conta-content .conte-section{
-    padding: 1rem;
+    padding: 1rem 0;
     line-height: 1.4rem;
 }
 
