--- a/css/styles.css
+++ b/css/styles.css
@@ -8,18 +8,17 @@
     --blueGreenSpan: #406770;
     --menuBlueGreen: #162e37c4;
     --pastelGreen: #D4ECDD;
-    --orange: #c07a68;
-    --crimsonLight: #a5756a;
-    --skyBlue: #5e8ea8;
-    --yellowLight: #c4ad62;
-    --blueReact: #4e9aad;
-    --greenNode: #618f69;
-    --blueDb: #5a81b4;
-    --lime: -webkit-linear-gradient(215deg, #eb5e33 0%, #ff7768 17%, #a665fa 39%, #32c5ff 60%, #1dc484 80%);
+    --orange: #c29e84;
+    --crimsonLight: #C28F84;
+    --skyBlue: #7ca8b6;
+    --yellowLight: #c5b16a;
+    --blueReact: #58a6b9;
+    --greenNode: #66916d;
+    --lime: #89ac9d;
     --yellowBrown: #BBA761;
-    --pinky: #9c6173;
-    --blueAlura: #5174a8;
-    --wine: #856a5f;
+    --pinky: #af7486;
+    --lemon: #749c86;
+    --wine: #a1888a;
     --sombra: -2px 10px 25px -15px #0a1316;
     --sombraBtn: -2px 10px 25px -9px #081114;
     --sombraCards: -2px 10px 25px -9px #081114;
@@ -261,7 +260,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 2px;
     box-shadow: var(--sombra);
 }
-.card-acerca>h2, .card-acerca>p{
+.card-acerca *{
     outline: 1px solid var(--white);
 }
 
@@ -271,12 +270,6 @@ body::-webkit-scrollbar-thumb {
     letter-spacing: 1px;
     line-height: 1.5rem;
     font-size: 14px;
-}
-.icon-ec{
-    width: 1.4rem;
-    height: 1.4rem;
-    margin: 0 0 -5px 0;
-    padding: 0;
 }
 
 /* tecnologias */
@@ -340,9 +333,6 @@ body::-webkit-scrollbar-thumb {
 }
 .tecnologias .tec-node{
     background-color: var(--greenNode);
-}
-.habilidades .hab-db{
-    background-color: var(--blueDb);
 }
 
 .tecnologias li i{
@@ -420,11 +410,11 @@ body::-webkit-scrollbar-thumb {
     background-color: var(--yellowBrown);
 }
 .formacion .second{
-    background-color: var(--blueAlura);
+    background-color: var(--pinky);
     top: 48%;
 }
 .formacion .third{
-    background-color: var(--pinky);
+    background-color: var(--lemon);
     top: 80%;
 }
 
