--- a/css/styles.css
+++ b/css/styles.css
@@ -439,6 +439,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .card{
+    position: relative;
     min-width: 245px;
     min-height: 160px;
     background-size: cover;
@@ -446,7 +447,16 @@ body::-webkit-scrollbar-thumb {
     margin: 3rem 0;
     border-radius: 2px;
     box-shadow: var(--sombraCards);
-    filter: brightness(60%);
+}
+.card::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--greenDark);
+    opacity: .5;
     transition: 500ms linear;
 }
 
@@ -461,8 +471,33 @@ body::-webkit-scrollbar-thumb {
     box-shadow: var(--sombraCards);
 }
 
-.card:hover{
-    filter: brightness(90%);
+.card:hover::after{
+    opacity: .1;
+}
+
+.card-relative_content-icon{
+    width: 200px;
+    position: absolute;
+    top: 35%;
+    left: 7%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.card-relative>a>.card-relative_content-icon>.card-relative_icon{
+    display: flex;
+    align-items: center;
+    padding: .2rem .4rem;
+    margin: .4rem;
+    background-color: var(--greenDark);
+    border-radius: 4px;
+    opacity: .7;
+    z-index: 3;
+    transition: 500ms linear;
+}
+
+.card-relative>a:hover .card-relative_content-icon{
+    opacity: 0;
 }
 
 .card-img1, .card-img2, .card-img3{
